More intro updates

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -4,9 +4,9 @@ instructor:
     webpage: https://ece.ut.ac.ir/~dehaqani
 
 teaching_assistant:
-  - name: Amirali S. Tehrani
-    profile_pic: /_images/pp/amiralisoltani.jpg
-    webpage: https://aasolteh.github.io
+  - name: Kamand Mesbah
+    profile_pic: /_images/pp/kammand.jpg
+    webpage: https://linkedin.com/in/kamand-mesbah-1b8b46202
     
   - name: Reza Salamat
     profile_pic: /_images/pp/rezasalamat.jpg
