--- a/_data/people.yml
+++ b/_data/people.yml
@@ -5,7 +5,7 @@ instructor:
 
 teaching_assistant:
   - name: Kamand Mesbah
-    profile_pic: /_images/pp/kammand.jpg
+    profile_pic: /_images/pp/rezasalamat.jpg
     webpage: https://linkedin.com/in/kamand-mesbah-1b8b46202
     
   - name: Reza Salamat
