--- a/_data/previous_offering.yml
+++ b/_data/previous_offering.yml
@@ -1,4 +1,10 @@
 offerings:
   - title: Introduction to Cognitive Neurosceince
     url: https://bcolab.ut.ac.ir/an-introduction-to-cognitive-neuroscience/
+  - title: Introduction to Statistical Inference Fall 2024
+    url: https://bcolabcourses.github.io/ISIfall2024/
+  - title: Introduction to Statistical Inference Spring 2024
+    url: https://bcolabcourses.github.io/ISIspr2024/
+  - title: Introduction to Statistical Inference Spring 2024
+    url: https://bcolabcourses.github.io/ISIspr2024/
 
